syntax = "proto3";

package io.xtech;

import "io/xtech/movie.proto";

message EmptyRequest {}

message MovieRequest {
    Movie movie = 1;
}

message SearchByCastRequest {
    string castName = 1;
}

/**
 * movie result message, contains list of movies
 */
message MoviesResult {
    /**
     * list of movies
     */
    repeated Movie result = 1;
}

service Example {
  /**
  * get all movies
  */
  rpc GetMovies (EmptyRequest) returns (MoviesResult) {}

  /**
  * search movies by the name of the cast
  */
  rpc SearchMoviesByCast (SearchByCastRequest) returns (stream Movie) {}

  /**
  * get all movies
  */
  rpc GetMovie (MovieRequest) returns (MoviesResult) {}

}

